add one step dynamic

--- a/6. Reinforcement Learning/1. Introduction.ipynb
+++ b/6. Reinforcement Learning/1. Introduction.ipynb
@@ -86,6 +86,9 @@
     "#### Trajectory\n",
     "- A sequence of states and actions that influence those states\n",
     "\n",
+    "#### One-step dynamic\n",
+    "- The one-step dynamics of the environment determine how the environment decides the state and reward at every time step.\n",
+    "\n",
     "### Domain Selection\n",
     "- is deciding which types of input and feedback your agent should pay attention to is a hard problem to solve.\n",
     "\n",
