Add markov property

--- a/6. Reinforcement Learning/1. Introduction.ipynb
+++ b/6. Reinforcement Learning/1. Introduction.ipynb
@@ -132,7 +132,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Markov Property\n",
+    "A stochastic process has the Markov property if the conditional probability distribution of future states of the process (conditional on both past and present states) depends only upon the present state, not on the sequence of events that preceded it. A process with this property is called a Markov process."
+   ]
   },
   {
    "cell_type": "code",
