--- a/projects/5.Reinforcement Learning/Dynamic_Programming.ipynb
+++ b/projects/5.Reinforcement Learning/Dynamic_Programming.ipynb
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -293,16 +293,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.zeros(env.nA).shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "def q_from_v(env, V, s, gamma=1):\n",
     "    q = np.zeros(env.nA)\n",
     "    \n",
-    "    ## TODO: complete the function\n",
+    "    for idx in range(q.shape[0]):\n",
+    "        _q = 0\n",
+    "        for prob, next_state, reward, done in env.P[s][idx]:\n",
+    "            _q += (prob) * (reward + (gamma * V[next_state]))\n",
+    "        q[idx] = _q\n",
     "    \n",
     "    return q"
    ]
@@ -316,11 +339,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Action-Value Function:\n",
+      "[[ 0.0147094   0.01393978  0.01393978  0.01317015]\n",
+      " [ 0.00852356  0.01163091  0.0108613   0.01550788]\n",
+      " [ 0.02444514  0.02095298  0.02406033  0.01435346]\n",
+      " [ 0.01047649  0.01047649  0.00698432  0.01396865]\n",
+      " [ 0.02166487  0.01701828  0.01624865  0.01006281]\n",
+      " [ 0.          0.          0.          0.        ]\n",
+      " [ 0.05433538  0.04735105  0.05433538  0.00698432]\n",
+      " [ 0.          0.          0.          0.        ]\n",
+      " [ 0.01701828  0.04099204  0.03480619  0.04640826]\n",
+      " [ 0.07020885  0.11755991  0.10595784  0.05895312]\n",
+      " [ 0.18940421  0.17582037  0.16001424  0.04297382]\n",
+      " [ 0.          0.          0.          0.        ]\n",
+      " [ 0.          0.          0.          0.        ]\n",
+      " [ 0.08799677  0.20503718  0.23442716  0.17582037]\n",
+      " [ 0.25238823  0.53837051  0.52711478  0.43929118]\n",
+      " [ 0.          0.          0.          0.        ]]\n"
+     ]
+    }
+   ],
    "source": [
     "Q = np.zeros([env.nS, env.nA])\n",
     "for s in range(env.nS):\n",
@@ -340,11 +385,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "**<span style=\"color: green;\">PASSED</span>**"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "check_test.run_check('q_from_v_check', q_from_v)"
    ]
