Init GLIE solution

--- a/projects/5.Reinforcement Learning/2.MonteCarloMethods/Monte_Carlo.ipynb
+++ b/projects/5.Reinforcement Learning/2.MonteCarloMethods/Monte_Carlo.ipynb
@@ -430,6 +430,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method Tuple.sample of Tuple(Discrete(32), Discrete(11), Discrete(2))>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def epsilon_greedy():"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
@@ -447,8 +467,9 @@
     "        if i_episode % 1000 == 0:\n",
     "            print(\"\\rEpisode {}/{}.\".format(i_episode, num_episodes), end=\"\")\n",
     "            sys.stdout.flush()\n",
-    "        \n",
-    "        ## TODO: complete the function\n",
+    "        epsilon = 1/i_episode\n",
+    "        episode = generate_episode(env)\n",
+    "        for idx, sar enumerate(episode):\n",
     "        \n",
     "    return policy, Q"
    ]
