Add tile coding solution

--- a/projects/5.Reinforcement Learning/6.Tile-Coding/Tile_Coding.ipynb
+++ b/projects/5.Reinforcement Learning/6.Tile-Coding/Tile_Coding.ipynb
@@ -9,13 +9,17 @@
     "\n",
     "Tile coding is an innovative way of discretizing a continuous space that enables better generalization compared to a single grid-based approach. The fundamental idea is to create several overlapping grids or _tilings_; then for any given sample value, you need only check which tiles it lies in. You can then encode the original continuous value by a vector of integer indices or bits that identifies each activated tile.\n",
     "\n",
+    "##### Dependencies: numpy, scipy, pandas, matplotlib, scikit-learn, tqdm, ipython, jupyter, gym\n",
+    "\n",
     "### 1. Import the Necessary Packages"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Import common libraries\n",
@@ -43,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +108,7 @@
        " array([-3.5, -2.5, -1.5, -0.5,  0.5,  1.5,  2.5,  3.5,  4.5])]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,8 +152,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def create_tilings(low, high, tiling_specs):\n",
@@ -247,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +265,7 @@
       "[(-1.2, -5.1), (-0.75, 3.25), (-0.5, 0.0), (0.25, -1.9), (0.15, -1.75), (0.75, 2.5), (0.7, -3.7), (1.0, 5.0)]\n",
       "\n",
       "Encoded samples:\n",
-      "[[[0, 0], [0, 0], [0, 0]], [[1, 8], [1, 8], [0, 7]], [[2, 5], [2, 5], [2, 4]], [[6, 3], [6, 3], [5, 2]], [[6, 3], [5, 3], [5, 2]], [[9, 7], [8, 7], [8, 7]], [[8, 1], [8, 1], [8, 0]], [[9, 9], [9, 9], [9, 9]]]\n"
+      "[[(0, 0), (0, 0), (0, 0)], [(1, 8), (1, 8), (0, 7)], [(2, 5), (2, 5), (2, 4)], [(6, 3), (6, 3), (5, 2)], [(6, 3), (5, 3), (5, 2)], [(9, 7), (8, 7), (8, 7)], [(8, 1), (8, 1), (8, 0)], [(9, 9), (9, 9), (9, 9)]]\n"
      ]
     }
    ],
@@ -279,10 +285,7 @@
     "    discretized_sample : array_like\n",
     "        A sequence of integers with the same number of dimensions as sample.\n",
     "    \"\"\"\n",
-    "    discretized_sample = []\n",
-    "    for i in range(len(sample)):\n",
-    "        discretized_sample.append(np.digitize([sample[i]], grid[i])[0])\n",
-    "    return discretized_sample\n",
+    "    return tuple(int(np.digitize(s, g)) for s, g in zip(sample, grid))\n",
     "\n",
     "\n",
     "def tile_encode(sample, tilings, flatten=False):\n",
@@ -321,8 +324,37 @@
     "           ( 0.7 , -3.7 ),\n",
     "           ( 1.0 ,  5.0 )]\n",
     "encoded_samples = [tile_encode(sample, tilings, False) for sample in samples]\n",
+    "encoded_samples_flat = [tile_encode(sample, tilings, True) for sample in samples]\n",
     "print(\"\\nSamples:\", repr(samples), sep=\"\\n\")\n",
     "print(\"\\nEncoded samples:\", repr(encoded_samples), sep=\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.875\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'[[0, 0, 0], [1, 1, 0], [2, 2, 2], [6, 6, 5], [6, 5, 5], [9, 8, 8], [8, 8, 8], [9, 9, 9]]'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(np.mean(np.dstack(encoded_samples_flat)[0][1]))\n",
+    "repr(encoded_samples_flat)"
    ]
   },
   {
@@ -416,9 +448,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "QTable(): size = (10, 10, 2)\n",
+      "QTable(): size = (10, 10, 2)\n",
+      "QTable(): size = (10, 10, 2)\n",
+      "TiledQTable(): no. of internal tables =  3\n",
+      "[GET]    Q((0.25, -1.9), 0) = 0.0\n",
+      "[UPDATE] Q((0.15, -1.75), 0) = 1.0\n",
+      "[GET]    Q((0.25, -1.9), 0) = 0.06666666666666667\n"
+     ]
+    }
+   ],
    "source": [
     "class QTable:\n",
     "    \"\"\"Simple Q-table.\"\"\"\n",
@@ -438,7 +484,7 @@
     "\n",
     "        # TODO: Create Q-table, initialize all Q-values to zero\n",
     "        # Note: If state_size = (9, 9), action_size = 2, q_table.shape should be (9, 9, 2)\n",
-    "        \n",
+    "        self.q_table = np.zeros(shape=(self.state_size + (self.action_size,)))\n",
     "        print(\"QTable(): size =\", self.q_table.shape)\n",
     "\n",
     "\n",
@@ -480,10 +526,12 @@
     "        value : float\n",
     "            Q-value of given <state, action> pair, averaged from all internal Q-tables.\n",
     "        \"\"\"\n",
-    "        # TODO: Encode state to get tile indices\n",
-    "        \n",
-    "        # TODO: Retrieve q-value for each tiling, and return their average\n",
-    "        pass\n",
+    "        encoded_state = tile_encode(state, self.tilings)\n",
+    "        q = []\n",
+    "        for idx, q_table in zip(encoded_state, self.q_tables):\n",
+    "            q.append(q_table.q_table[tuple(idx + (action,))])\n",
+    "        return np.mean(q)\n",
+    "                \n",
     "\n",
     "    def update(self, state, action, value, alpha=0.1):\n",
     "        \"\"\"Soft-update Q-value for given <state, action> pair to value.\n",
@@ -502,10 +550,12 @@
     "        alpha : float\n",
     "            Update factor to perform soft-update, in [0.0, 1.0] range.\n",
     "        \"\"\"\n",
-    "        # TODO: Encode state to get tile indices\n",
+    "        # Encode state to get tile indices\n",
+    "        encoded_state = tile_encode(state, self.tilings)\n",
     "        \n",
-    "        # TODO: Update q-value for each tiling by update factor alpha\n",
-    "        pass\n",
+    "        for idx, q_table in zip(encoded_state, self.q_tables):\n",
+    "            q_table.q_table[tuple(idx + (action,))] = \\\n",
+    "                alpha * value + (1.0 - alpha) * q_table.q_table[tuple(idx + (action,))]\n",
     "\n",
     "\n",
     "# Test with a sample Q-table\n",
@@ -534,17 +584,142 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class QLearningAgent:\n",
+    "    \"\"\"Q-Learning agent that can act on a continuous state space by discretizing it.\"\"\"\n",
+    "\n",
+    "    def __init__(self, env, state_grid, alpha=0.02, gamma=0.99,\n",
+    "                 epsilon=1.0, epsilon_decay_rate=0.9995, min_epsilon=.01, seed=505):\n",
+    "        \"\"\"Initialize variables, create grid for discretization.\"\"\"\n",
+    "        # Environment info\n",
+    "        self.env = env\n",
+    "        self.state_grid = state_grid\n",
+    "        self.state_size = tuple(len(splits) + 1 for splits in self.state_grid)  # n-dimensional state space\n",
+    "        self.action_size = self.env.action_space.n  # 1-dimensional discrete action space\n",
+    "        self.seed = np.random.seed(seed)\n",
+    "        print(\"Environment:\", self.env)\n",
+    "        print(\"State space size:\", self.state_size)\n",
+    "        print(\"Action space size:\", self.action_size)\n",
+    "        \n",
+    "        # Learning parameters\n",
+    "        self.alpha = alpha  # learning rate\n",
+    "        self.gamma = gamma  # discount factor\n",
+    "        self.epsilon = self.initial_epsilon = epsilon  # initial exploration rate\n",
+    "        self.epsilon_decay_rate = epsilon_decay_rate # how quickly should we decrease epsilon\n",
+    "        self.min_epsilon = min_epsilon\n",
+    "        \n",
+    "        # Create Q-table\n",
+    "        self.q_table = np.zeros(shape=(self.state_size + (self.action_size,)))\n",
+    "        print(\"Q table size:\", self.q_table.shape)\n",
+    "\n",
+    "    def preprocess_state(self, state):\n",
+    "        \"\"\"Map a continuous state to its discretized representation.\"\"\"\n",
+    "        return tuple(discretize(state, self.state_grid))\n",
+    "\n",
+    "    def reset_episode(self, state):\n",
+    "        \"\"\"Reset variables for a new episode.\"\"\"\n",
+    "        # Gradually decrease exploration rate\n",
+    "        self.epsilon *= self.epsilon_decay_rate\n",
+    "        self.epsilon = max(self.epsilon, self.min_epsilon)\n",
+    "\n",
+    "        # Decide initial action\n",
+    "        self.last_state = self.preprocess_state(state)\n",
+    "        self.last_action = np.argmax(self.q_table[self.last_state])\n",
+    "        return self.last_action\n",
+    "    \n",
+    "    def reset_exploration(self, epsilon=None):\n",
+    "        \"\"\"Reset exploration rate used when training.\"\"\"\n",
+    "        self.epsilon = epsilon if epsilon is not None else self.initial_epsilon\n",
+    "\n",
+    "    def act(self, state, reward=None, done=None, mode='train'):\n",
+    "        \"\"\"Pick next action and update internal Q table (when mode != 'test').\"\"\"\n",
+    "        state = self.preprocess_state(state)\n",
+    "        if mode == 'test':\n",
+    "            # Test mode: Simply produce an action\n",
+    "            action = np.argmax(self.q_table[state])\n",
+    "        else:\n",
+    "            # Train mode (default): Update Q table, pick next action\n",
+    "            # Note: We update the Q table entry for the *last* (state, action) pair with current state, reward\n",
+    "            self.q_table[self.last_state + (self.last_action,)] += self.alpha * \\\n",
+    "                (reward + self.gamma * max(self.q_table[state]) - self.q_table[self.last_state + (self.last_action,)])\n",
+    "\n",
+    "            # Exploration vs. exploitation\n",
+    "            do_exploration = np.random.uniform(0, 1) < self.epsilon\n",
+    "            if do_exploration:\n",
+    "                # Pick a random action\n",
+    "                action = np.random.randint(0, self.action_size)\n",
+    "            else:\n",
+    "                # Pick the best action from Q table\n",
+    "                action = np.argmax(self.q_table[state])\n",
+    "\n",
+    "        # Roll over current state, action for next step\n",
+    "        self.last_state = state\n",
+    "        self.last_action = action\n",
+    "        return action"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def run(agent, env, num_episodes=20000, mode='train'):\n",
+    "    \"\"\"Run agent in given reinforcement learning environment and return scores.\"\"\"\n",
+    "    scores = []\n",
+    "    max_avg_score = -np.inf\n",
+    "    for i_episode in range(1, num_episodes+1):\n",
+    "        # Initialize episode\n",
+    "        state = env.reset()\n",
+    "        action = agent.reset_episode(state)\n",
+    "        total_reward = 0\n",
+    "        done = False\n",
+    "\n",
+    "        # Roll out steps until done\n",
+    "        while not done:\n",
+    "            state, reward, done, info = env.step(action)\n",
+    "            total_reward += reward\n",
+    "            action = agent.act(state, reward, done, mode)\n",
+    "\n",
+    "        # Save final score\n",
+    "        scores.append(total_reward)\n",
+    "        \n",
+    "        # Print episode stats\n",
+    "        if mode == 'train':\n",
+    "            if len(scores) > 100:\n",
+    "                avg_score = np.mean(scores[-100:])\n",
+    "                if avg_score > max_avg_score:\n",
+    "                    max_avg_score = avg_score\n",
+    "\n",
+    "            if i_episode % 100 == 0:\n",
+    "                print(\"\\rEpisode {}/{} | Max Average Score: {}\".format(i_episode, num_episodes, max_avg_score), end=\"\")\n",
+    "                sys.stdout.flush()\n",
+    "\n",
+    "    return scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mlnd",
+   "display_name": "Python [conda env:py3]",
    "language": "python",
-   "name": "mlnd"
+   "name": "conda-env-py3-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -556,7 +731,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.5"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
